Refine admin users form
